test/bad/classes/method02.px

class Test def
    func f() def
        skip

Test().f(3)
